[package]
name = "kindle_to_arena"
version = "0.1.0"
authors = ["mmbyim@bu.edu <mmbyim@bu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.11"
reqwest = { version = "0.10.6", features = ["blocking", "json"] }
json = "0.12.4"
serde_json = "1.0.55"
anyhow = "1.0"
